--- a/flat-service/src/main/resources/application.yaml
+++ b/flat-service/src/main/resources/application.yaml
@@ -27,4 +27,4 @@ custom:
 app:
   jwt:
     secret: QAZ1ZjAzNjQtMzViZi00MDRjLTljZjQtNjNjYWIyZTU5ZDYz
-    issuer: org.alexey
+    issuer: by.potapchuk
